--- a/Demo_view01/index.html
+++ b/Demo_view01/index.html
@@ -56,7 +56,15 @@ IP Table Suitable for Networking Administrator(s)
     <link href='' rel='stylesheet' type='text/css' />
     <script src='' type='text/javascript'></script>
     -->
-    <link href='/home/vdragon/Ubuntu One/Programming/Web_development/My_projects/Generic_CSS_stylesheet/Stylesheets/Generic_stylesheet.css' rel='stylesheet' type='text/css' />
+    <link href='/home/vdragon/Ubuntu One/Programming/Web_development/My_projects/Generic_CSS_stylesheet/Stylesheets/Generic_stylesheet.css'
+           rel='stylesheet'
+           type='text/css' />
+    <link href='Stylesheets/Global_NetAdminIPtable.css'
+           rel='stylesheet'
+           type='text/css' />
+    <link href='Stylesheets/IPtable_NetAdminIPtable.css'
+           rel='stylesheet'
+           type='text/css' />
   </head>
   <!--body標籤：包含網頁的內容(content)
         XHTML規範需要／選用的屬性：
@@ -79,7 +87,39 @@ IP Table Suitable for Networking Administrator(s)
       <hr />
     </div>
     <div class='div_content'>
-
+      <div id='control_area'>
+        <!--放置控制按鈕的區塊-->
+      </div>
+      <div id='ip_table'>
+        <table id='ip_80_table' class='generic_table'>
+          <caption>網段140.121.80.X的IP配置狀態入下：</caption>
+          <thead>
+            <tr>
+              <th>IP位址</th>
+              <th>有無被設定</th>
+              <th>機器功能</th>
+              <th>使用的連接埠</th>
+              <th>負責人</th>
+              <th>機器所在位置</th>
+            </tr>
+          </thead>
+          <tfoot>
+            <tr>
+              <th colspan='6'>table footer</th>
+            </tr>
+          </tfoot>
+          <tbody>
+            <tr>
+              <td>140.121.80.16</td>
+              <td>有</td>
+              <td>DNS(Domain Name System)</td>
+              <td>53/tcp</td>
+              <td>S2</td>
+              <td>某個地方</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
 
     </div>
     <!--footer-->
